Bezier Bevel factor mapping problem #44186

Closed
opened 2015-03-30 00:02:11 +02:00 by Georg K · 8 comments

System Information
Win 7 x64, Radeon HD7770

Blender Version
Broken: 2,73a, 2.74 RC4
Worked: ?

Short description of error
There is a separate dropdown menu for start and end bevel factor mapping, but using different modes for start and end does not produce usable results: the bevel is just fully visible or completely gone

Exact steps for others to reproduce the error
In Bevel_factor_Mapping_bug.blend
move the End slider: the bevel is completely visible from 0 - 0.999 and vanishes at 1
change both mapping settings to the same mapping type: start and end work like expected

**System Information** Win 7 x64, Radeon HD7770 **Blender Version** Broken: 2,73a, 2.74 RC4 Worked: ? **Short description of error** There is a separate dropdown menu for start and end bevel factor mapping, but using different modes for start and end does not produce usable results: the bevel is just fully visible or completely gone **Exact steps for others to reproduce the error** In [Bevel_factor_Mapping_bug.blend](https://archive.blender.org/developer/F156184/Bevel_factor_Mapping_bug.blend) move the End slider: the bevel is completely visible from 0 - 0.999 and vanishes at 1 change both mapping settings to the same mapping type: start and end work like expected
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @georgK

Added subscriber: @georgK

Added subscriber: @mont29

Added subscriber: @mont29

To be precise, the buggy settings are Resolution as Start, and Segments or Spline as End. All other combinations seem to work OK.

To be precise, the buggy settings are Resolution as Start, and Segments or Spline as End. All other combinations seem to work OK.
Bastien Montagne self-assigned this 2015-03-30 10:21:23 +02:00

This issue was referenced by 1b327aa219

This issue was referenced by 1b327aa2195ff4c4d3f87b303a767cfaea648047

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 1b327aa219.

Closed by commit 1b327aa219.

This issue was referenced by e6b81ae69a

This issue was referenced by e6b81ae69a8b811dedf3df0b743c443bb5f5592a
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44186
No description provided.