Fix T44186: Bezier Bevel facto mapping broken when 'start' was set to 'Resolution' and 'end' was not.

Trivial, we need totla_length in that case too.

Safe to be backported to 2.74.